--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,4 @@ experiments/experiment1/ckpt-19.index filter=lfs diff=lfs merge=lfs -text
 experiments/experiment1/ckpt-21.index filter=lfs diff=lfs merge=lfs -text
 experiments/experiment1/eval filter=lfs diff=lfs merge=lfs -text
 experiments/experiment1/train filter=lfs diff=lfs merge=lfs -text
+.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
